# acoustic-modem

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  dva-agenti.md  measurements.md  protocol.md  threads.md  zprava.md
src/app/: dsp_thread.cpp  dsp_thread.hpp  main_gui.cpp  panels.cpp  panels.hpp  ui_font.hpp  waterfall.cpp  waterfall.hpp
src/audio/: audio_engine.cpp  audio_engine.hpp
src/cli/: main_cli.cpp
src/core/: bits.hpp  config.hpp  prbs.hpp  spsc_ring.hpp  wav_io.cpp  wav_io.hpp
src/dsp/: channel_sim.cpp  channel_sim.hpp  chirp.cpp  chirp.hpp  fir.cpp  fir.hpp  goertzel.cpp  goertzel.hpp
src/link/: acoustic_link.cpp  acoustic_link.hpp  tap_device.cpp  tap_device.hpp
src/modem/: dbpsk.cpp  fsk2.cpp  mfsk16.cpp  modulator.hpp  ook.cpp  qfsk.cpp  registry.cpp  schemes.hpp
src/net/: main_tap.cpp
src/protocol/: crc16.cpp  crc16.hpp  frame_receiver.cpp  frame_receiver.hpp  framer.cpp  framer.hpp
sync/: README.md
tests/: test_bits.cpp  test_chain.cpp  test_crc.cpp  test_device_select.cpp  test_frame.cpp  test_goertzel.cpp  test_link.cpp  test_main.cpp  test_prbs.cpp  test_qfsk.cpp  test_ring.cpp
